<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_onat"
    tools:context=".AccountActivity">
    <TextView
        android:background="?attr/background_header"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:textColor="?attr/text_acount"
        android:textAlignment="center"
        android:paddingBottom="5dp"
        android:fontFamily="@font/fradm"
        android:id="@+id/user_name_display"
        android:layout_height="wrap_content" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_column="0"
            android:text="@string/course"
            android:textColor="?attr/text_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_column="1"
            android:text="5"
            android:textColor="?attr/text_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/departments"
            android:textColor="?attr/text_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_column="1"
            android:layout_row="1"
            android:text="Infocommunications"
            android:textColor="?attr/text_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:text="@string/payacad"
        android:textColor="?attr/button_text"
        android:backgroundTint="?attr/button_background"
        android:layout_height="wrap_content" />
</LinearLayout>