<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/background_app"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#30ebebeb">

        <!--<LinearLayout-->
            <!--android:id="@+id/notification_area"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--&gt;-->
            <!--<ImageView-->
                <!--android:contentDescription="@string/notification_description"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:src="@drawable/notification"-->
                <!--android:layout_height="wrap_content" />-->
            <!--<TextView-->
                <!--android:background="@drawable/background_notification"-->
                <!--android:text="3"-->
                <!--android:gravity="center"-->
                <!--android:fontFamily="@font/miriad_pro"-->
                <!--android:textColor="#d9d7d7"-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_marginLeft="6dp"-->
                <!--android:layout_height="20dp" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/fradm"
                android:text="@string/home_top_bar"
                android:textColor="#d9d7d7"
                android:textSize="30sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/settings" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:weightSum="1">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:stretchColumns="*">

            <TableRow android:layout_marginBottom="20dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/maps_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/background_main_buttons"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/maps_icon"
                            app:layout_constraintBottom_toTopOf="@+id/guideline"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/arial"
                            android:text="@string/navigation_title"
                            android:textColor="#adadad"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/guideline" />

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.6" />
                    </android.support.constraint.ConstraintLayout>
                </eightbitlab.com.blurview.BlurView>

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/library_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/background_main_buttons"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="41dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/library_icon"
                            app:layout_constraintBottom_toTopOf="@+id/guideline2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/arial"
                            android:text="@string/library_title"
                            android:textColor="#adadad"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/guideline2" />

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.6" />
                    </android.support.constraint.ConstraintLayout>
                </eightbitlab.com.blurview.BlurView>
            </TableRow>

            <TableRow>

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/teacher_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/background_main_buttons"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/teacher_icon"
                            app:layout_constraintBottom_toTopOf="@+id/guideline3"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="21dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/arial"
                            android:text="@string/teachers_title"
                            android:textColor="#adadad"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/guideline3" />

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.6" />
                    </android.support.constraint.ConstraintLayout>
                </eightbitlab.com.blurview.BlurView>

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/account_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:background="@drawable/background_main_buttons"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_news"
                            app:layout_constraintBottom_toTopOf="@+id/guideline4"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/arial"
                            android:text="@string/news_title"
                            android:textColor="#adadad"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/guideline4" />

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.6" />
                    </android.support.constraint.ConstraintLayout>
                </eightbitlab.com.blurview.BlurView>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>